# WB-notice-task

./: Dockerfile  main.py  parser_test.py  pyproject.toml
data/: main.db
handlers/: commands.py  messages.py  queries.py
keyboards/: home.py  main_kb.py
models/: __init__.py  browser.py  card_items.py  user.py
settings/: config.py  settings.ini  states.py
tools/: bd.py  db.py  parser.py
