[tool.poetry]
name = "wb-notice-task"
version = "0.1.0"
description = ""
authors = ["Unti1 <kostyuchenko.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4.1"
playwright = "^1.42.0"
pip = "^24.0"
install = "^1.3.5"
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
